@@ -2,11 +2,9 @@ package com.nabagagem.connectbe.services.profile;
 
 import com.nabagagem.connectbe.controllers.LoginHelper;
 import com.nabagagem.connectbe.domain.profile.AvailabilityType;
-import com.nabagagem.connectbe.domain.profile.ProfileMetrics;
 import com.nabagagem.connectbe.domain.profile.ProfilePayload;
 import com.nabagagem.connectbe.domain.profile.SkillPayload;
 import com.nabagagem.connectbe.domain.profile.SkillReadPayload;
-import com.nabagagem.connectbe.domain.rating.ProfileRatingPayload;
 import com.nabagagem.connectbe.entities.CertificationPayload;
 import com.nabagagem.connectbe.entities.PersonalInfo;
 import com.nabagagem.connectbe.entities.ProfileBio;
@@ -20,12 +18,8 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.security.access.AccessDeniedException;
 
-import java.net.URL;
 import java.time.DayOfWeek;
-import java.time.LocalDateTime;
-import java.time.ZoneOffset;
-import java.time.ZonedDateTime;
-import java.util.List;
+import java.util.Collections;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
@@ -56,18 +50,10 @@ class ProfileProfileInitServiceTest {
         final ProfilePayload profile = new ProfilePayload(UUID.fromString("74632107-c565-4590-9395-49b68d14f694"),
                 UUID.fromString("0491651f-03c0-4994-b965-838966b1c669"), PersonalInfo.builder()
                 .publicProfile(true)
-                .build(), 0.0, Set.of(new SkillReadPayload(UUID.fromString("92520c30-2971-458c-a5ff-3e257aae9257"),
+                .build(), Set.of(new SkillReadPayload(UUID.fromString("92520c30-2971-458c-a5ff-3e257aae9257"),
                 new SkillPayload("name", 0, ProfileSkill.SkillLevel.ONE_2_THREE, false))),
-                Set.of(new CertificationPayload("title", 2020)), new ProfileMetrics(0L, 0L, 0L, 0L, 0L, 0L,
-                ZonedDateTime.of(LocalDateTime.of(2020, 1, 1, 0, 0, 0), ZoneOffset.UTC),
-                ZonedDateTime.of(LocalDateTime.of(2020, 1, 1, 0, 0, 0), ZoneOffset.UTC)), ProfileBio.builder().build(),
-                Map.ofEntries(Map.entry(DayOfWeek.FRIDAY, AvailabilityType.MORNING)),
-                new ProfileRatingPayload("sourceProfilePublicName", new URL("https://example.com/"),
-                        UUID.fromString("07749593-9615-41e2-baf1-eb89b196e862"), 0, "description",
-                        ZonedDateTime.of(LocalDateTime.of(2020, 1, 1, 0, 0, 0), ZoneOffset.UTC)),
-                List.of(new ProfileRatingPayload("sourceProfilePublicName", new URL("https://example.com/"),
-                        UUID.fromString("0ccbe865-226c-4170-97c8-366c6503917b"), 0, "description",
-                        ZonedDateTime.of(LocalDateTime.of(2020, 1, 1, 0, 0, 0), ZoneOffset.UTC))), ProfileType.USER);
+                Set.of(new CertificationPayload("title", 2020)), ProfileBio.builder().build(),
+                Map.ofEntries(Map.entry(DayOfWeek.FRIDAY, AvailabilityType.MORNING)), ProfileType.USER, Collections.emptySet());
 
         // Run the test
         final ProfilePayload result = profileAuthServiceUnderTest.isAllowedOn(profile);
@@ -82,18 +68,10 @@ class ProfileProfileInitServiceTest {
         final ProfilePayload profile = new ProfilePayload(UUID.fromString("74632107-c565-4590-9395-49b68d14f694"),
                 UUID.fromString("0491651f-03c0-4994-b965-838966b1c669"), PersonalInfo.builder()
                 .publicProfile(false)
-                .build(), 0.0, Set.of(new SkillReadPayload(UUID.fromString("92520c30-2971-458c-a5ff-3e257aae9257"),
+                .build(), Set.of(new SkillReadPayload(UUID.fromString("92520c30-2971-458c-a5ff-3e257aae9257"),
                 new SkillPayload("name", 0, ProfileSkill.SkillLevel.ONE_2_THREE, false))),
-                Set.of(new CertificationPayload("title", 2020)), new ProfileMetrics(0L, 0L, 0L, 0L, 0L, 0L,
-                ZonedDateTime.of(LocalDateTime.of(2020, 1, 1, 0, 0, 0), ZoneOffset.UTC),
-                ZonedDateTime.of(LocalDateTime.of(2020, 1, 1, 0, 0, 0), ZoneOffset.UTC)), ProfileBio.builder().build(),
-                Map.ofEntries(Map.entry(DayOfWeek.FRIDAY, AvailabilityType.MORNING)),
-                new ProfileRatingPayload("sourceProfilePublicName", new URL("https://example.com/"),
-                        UUID.fromString("07749593-9615-41e2-baf1-eb89b196e862"), 0, "description",
-                        ZonedDateTime.of(LocalDateTime.of(2020, 1, 1, 0, 0, 0), ZoneOffset.UTC)),
-                List.of(new ProfileRatingPayload("sourceProfilePublicName", new URL("https://example.com/"),
-                        UUID.fromString("0ccbe865-226c-4170-97c8-366c6503917b"), 0, "description",
-                        ZonedDateTime.of(LocalDateTime.of(2020, 1, 1, 0, 0, 0), ZoneOffset.UTC))), ProfileType.USER);
+                Set.of(new CertificationPayload("title", 2020)), ProfileBio.builder().build(),
+                Map.ofEntries(Map.entry(DayOfWeek.FRIDAY, AvailabilityType.MORNING)), ProfileType.USER, Collections.emptySet());
         when(mockLoginHelper.loggedUser()).thenReturn(Optional.empty());
 
         // Run the test
@@ -113,8 +91,6 @@ class ProfileProfileInitServiceTest {
 
         // Run the test
         profileAuthServiceUnderTest.failIfNotLoggedIn(UUID.fromString("b255f6d7-a150-4b3d-b42d-f41b4a257f3d"));
-
-        // Verify the results
     }
 
     @Test
